# AIF360

amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/: .amlignore  .gitattributes  .gitignore  .hadolint.yml  .pre-commit-config.yaml  Dockerfile  DockerfileAML  README.md  aml-config.example.yml  dev-config.yml  entrypoint.sh  production-config.yml  pyproject.toml
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/analysis/: basic_analysis_model_and_features.ipynb  edit_expectations.ipynb
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/analysis/bias-analysis/: 20220523_bias_analysis_after_prepilot.ipynb  20220525_bias_results_bugs_solved.xlsx  20220525_bias_results_presented_in_review.xlsx  20220531_bias_analysis_after_reweighing.ipynb  20220601_bias_results_after_reweighing.xlsx  bias_analysis.ipynb  west-nonwest-countries.json  west-nonwest-nationalities.json
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/ci-cd/: build-pipeline.yml  deploy-pipeline.yml  main.yml  prebuild-pipeline.yml  prerequisites-pipeline.yml
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/ci-cd/daily-restart-appservice/: daily-restart-appservice.yml  restart-acc.yml  restart-prd.yml
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/ci-cd/scripts/: PushImageToRegistry.ps1
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/ci-cd/templates/: authenticate-azure-artifacts.yml  code-quality-security-checks.yml  download-aml-model.yml
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/tests/unit/: test_version.py
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/wpi_onderzoekswaardigheid_aanvraag/: check_expectations.py  common.py  project_paths.py  scorer.py
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/wpi_onderzoekswaardigheid_aanvraag/api/: api.py  healthcheck.py
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/wpi_onderzoekswaardigheid_aanvraag/components/: __init__.py  dienst_to_applications_and_filtering.py  label_and_filtering.py  proces_type_info.py
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/wpi_onderzoekswaardigheid_aanvraag/datasources/: azure.py
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/wpi_onderzoekswaardigheid_aanvraag/entrypoints/: model_stats.py  train_preprocessing_pipeline.py
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/wpi_onderzoekswaardigheid_aanvraag/model/: build_model.py
amsterdam/wpi_uitkeringsfraude/Repo wpi-onderzoekswaardigheid-aanvraag - based on dev branch commit 069435abe/wpi_onderzoekswaardigheid_aanvraag/preprocessing/: clean.py  function_decorators.py  rows_by_date_filter.py
(+103 files in other folders)
